<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingBottom="18dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_title"
                android:textColor="#637181"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/budget_tips"
                android:textColor="#637181" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_budget"
                    android:textColor="#637181"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_edit_ns"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_blue_conor_button"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/minimum_budget_often"
                android:textColor="#637181"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lv_ngan_sach_toi_thieu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp">

                </ListView>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/basic_budget_often"
                android:textColor="#637181"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/lv_ngan_sach_co_ban1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp">

            </ListView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/lifestyle_often"
                android:textColor="#637181"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/lv_phong_cach_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp">

            </ListView>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="2dp"
                    android:paddingTop="3dp"
                    android:text="@string/budget_three_day"
                    android:textColor="#637181"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_manager"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_blue_conor_button"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/spendmanager"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

            </TableRow>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp" />

            <include layout="@layout/budget_chart" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>