<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_setup1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_default"
    tools:context="com.example.hoang.doantotnghiep.View.Fragment.Setup1Fragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_title"
                android:textColor="@color/color_white_transparent_50"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descrip_setup1"
                android:textColor="@color/color_white_transparent_50"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/title_setup1"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_big" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_thunhap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/setup1_category"
                    android:textAllCaps="true"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_big" />

                <Button
                    android:id="@+id/btn_setup1_add"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_medium"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/drawable_left_add"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:paddingLeft="@dimen/drawable_padding"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_setup1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_margin"
                android:layout_marginTop="@dimen/margin_24dp">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
