<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_welcome"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_splash"
    tools:context="com.example.hoang.doantotnghiep.View.Fragment.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_64dp"
            android:src="@drawable/icon_avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/title_welcome"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_medium" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_48dp"
            android:src="@drawable/icon_quote_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin"
            android:gravity="center"
            android:text="@string/descrip_welcome_1"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_big" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin"
            android:gravity="center"
            android:text="@string/descrip_welcome_2"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_big" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin"
            android:src="@drawable/icon_quote_down" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/margin_48dp"
            android:layout_marginRight="@dimen/margin_48dp"
            android:layout_marginTop="@dimen/margin_48dp"
            android:background="@drawable/bg_button_default"
            android:text="@string/start"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_big" />
    </LinearLayout>

</LinearLayout>
